@@ -21,7 +21,7 @@
 import urllib,urllib2,re,xbmcplugin,xbmcgui,xbmc,xbmcaddon,HTMLParser,os,sys,time,subprocess,shutil,hashlib
 h = HTMLParser.HTMLParser()
 
-versao = '1.0.7'
+versao = '1.0.8'
 addon_id = 'plugin.video.xbmctools'
 selfAddon = xbmcaddon.Addon(id=addon_id)
 addonfolder = selfAddon.getAddonInfo('path')
@@ -52,7 +52,12 @@ def CATEGORIES():
 		addLink('','','nothing')
 		VersionChecker("windows")
 	#-----------------------------------------------------------------------
-	elif xbmc.getCondVisibility('System.Platform.OSX'): erro_os()
+	elif xbmc.getCondVisibility('System.Platform.OSX'):
+		mensagem_os("macOS")
+		addDir(traducao(2003),"macos",3,artfolder + "dll.png",False)
+		addDir(traducao(2004),"macos",9,artfolder + "backup.png")
+		addLink('','','nothing')
+		VersionChecker("macos")
 	elif xbmc.getCondVisibility('system.platform.linux') and not xbmc.getCondVisibility('system.platform.Android'):
 		if os.uname()[4] == 'armv6l': 
 			#RASPBERRY
@@ -114,6 +119,11 @@ def VersionChecker(system):
 	if system == "ios":
 		librtmp_path = os.path.join(xbmc.translatePath("special://xbmc").replace('XBMCData/XBMCHome','Frameworks'),"librtmp.0.dylib")
 		md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/ios.xml.md5")
+	elif url == "macos":
+		librtmp_path = os.path.join(xbmc_folder.replace('Resources/XBMC','Frameworks'),"librtmp.0.dylib")
+		if os.uname()[4] == "i686": md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/macos_x86.xml.md5")
+		elif os.uname()[4] == "x86_64": md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/macos_x64.xml.md5")
+		else: return
 	elif system == "windows":
 		librtmp_path = os.path.join(xbmc.translatePath("special://xbmc"), "system/players/dvdplayer/librtmp.dll")
 		md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/windows.xml.md5")
@@ -316,7 +326,7 @@ def backup_(url):
 		dialog.ok(traducao(2026),traducao(2027))
 		return
 		
-	if "windows" in url or "ios" in url:
+	if "windows" in url or "ios" in url or "macos" in url:
 		xbmc_folder = xbmc.translatePath("special://xbmc")
 		if "windows" in url:
 			if not is_admin():
@@ -327,6 +337,9 @@ def backup_(url):
 		if "ios" in url:
 			librtmp_path = os.path.join(xbmc_folder.replace('XBMCData/XBMCHome','Frameworks'),"librtmp.0.dylib")
 			bak_path = os.path.join(xbmc_folder.replace('XBMCData/XBMCHome','Frameworks'),"librtmp.0.dylib.bak")
+		if "macos" in url:
+			librtmp_path = os.path.join(xbmc_folder.replace('Resources/XBMC','Frameworks'),"librtmp.0.dylib")
+			bak_path = os.path.join(xbmc_folder.replace('Resources/XBMC','Frameworks'),"librtmp.0.dylib.bak")
 		
 		if ("remove" in url or "restore" in url) and not os.path.exists(bak_path): 
 			dialog.ok(traducao(2016), traducao(2023))
@@ -568,6 +581,24 @@ def librtmp_updater(url):
 		my_librtmp = os.path.join(addonfolder,"resources","temp","librtmp.0.dylib")
 		download_url = "http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/iOS/librtmp.0.dylib"
 		md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/ios.xml.md5")
+	elif url == "macos":
+		if os.uname()[4] == "i686": 
+			url_download = "http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/macOS/x86/librtmp.0.dylib"
+			md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/macos_x86.xml.md5")
+		elif os.uname()[4] == "x86_64": 
+			url_download = "http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/macOS/x64/librtmp.0.dylib"
+			md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/macos_x64.xml.md5")
+		else:
+			ret = dialog.select(traducao(2030), ['x86', 'x64'])
+			if ret == 0:
+				url_download = "http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/macOS/x86/librtmp.0.dylib"
+				md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/macos_x86.xml.md5")
+			elif ret == 1: 
+				url_download = "http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/macOS/x64/librtmp.0.dylib"
+				md5 = abrir_url("http://anonymous-repo.googlecode.com/svn/trunk/xbmc-tools/librtmp/md5/macos_x64.xml.md5")
+			else: return
+		librtmp_path = os.path.join(xbmc_folder.replace('Resources/XBMC','Frameworks'),"librtmp.0.dylib")
+		my_librtmp = os.path.join(addonfolder,"resources","temp","librtmp.0.dylib")
 	else: return
 	
 	if os.path.exists(librtmp_path) is False:
